# NAI1

./: Makefile  README.md  main.py  pyproject.toml
exercise_1/: README.md
exercise_1/src/: board_manager.py  main.py
exercise_2/: Makefile  README.md
exercise_2/src/: cart_controller.py  fuzzy_logic.py  main.py
exercise_3/: README.md
exercise_3/src/: main.py  ratings.json
exercise_4/: Makefile  README.md
exercise_4/models/: mushroom_decision_tree_full.joblib  mushroom_svc_full.joblib  mushroom_svc_full_grid_best_params.joblib  seeds_decision_tree_full.joblib  seeds_svc_full.joblib  seeds_svc_full_grid_best_params.joblib
exercise_4/src/: main.py  mushroom_classification_summary.txt  sample_predictions.txt  seeds_classification_summary.txt  svm_kernel_summary.txt
exercise_5/: README.md
exercise_5/data/mushrooms/: data-descriptions.txt
exercise_5/models/: animal_model.keras  clothing_model_cnn.keras  clothing_model_mlp.keras  mushroom_model.keras
exercise_5/src/: main.py
exercise_5/src/modules/: animal_classifier.py  clothing_classifier.py  imdb_review_sentiment_classifier.py  mushroom_classifier.py
exercise_6/: README.md
exercise_6/src/: main.py
exercise_7/: README.md
exercise_7/src/: main.py
managers/: board_manager.py
src/: board_manager.py  main.py
