[project]
name = "TNTFrog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyai>=2.0.12",
    "gymnasium[classic-control]>=1.2.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "packaging>=25.0",
    "scikit-fuzzy>=0.5.0",
    "scipy>=1.16.3",
]
