[project]
name = "TNTFrog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "easyai>=2.0.12",
    "gymnasium[classic-control]>=1.2.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "networkx>=3.5",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
