[project]
name = "TNTFrog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "easyai>=2.0.12",
    "gymnasium[atari,classic-control]>=1.2.1",
    "ale-py>=0.10.1",
    "autorom>=0.6.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "networkx>=3.5",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.3.0",
    "tensorflow>=2.20.0",
    "torch>=2.2.0",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
